2016-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2529.c
	  Regression test for bug #2517.

2016-07-29 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/cmd.src/cmd_exec.cc
	* sim/ucsim/cmd.src/cmd_get.cc
	* sim/ucsim/cmd.src/command.cc
	* sim/ucsim/fuio.cc
	* sim/ucsim/s51.src/interrupt.cc
	* sim/ucsim/s51.src/uc51.cc
	* sim/ucsim/sim.src/mem.cc
	* sim/ucsim/stm8.src/itc.cc
	* sim/ucsim/utils.h
	  Fix build failures on cygwin.
	* src/SDCCicode.c
	* src/SDCCicode.h
	  Fix bug #2517.

2016-07-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/fwio.cc: added _WIN32_WINNT def for GetConsoleWindow()
	* sim/ucsim/fio.cc: handle case S_IRGRP and S_IROTH not defined
	* sim/ucsim/doc/Makefile.in: copy *.svg files instead of *.gif

2016-07-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug #2529

2016-07-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/expf.c: ensure exponent not random before normalization

2016-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2385.c:
	  Disable a test for tlcs90, so all tests compile for tlcs90.

2016-07-26 Daniel Drotos <drdani AT mazsola.iit.uni-miskolc.hu>

	* sim/ucsim/.version, sim/ucsim/Makefile.in, sim/ucsim/NEWS,
	  sim/ucsim/README, sim/ucsim/TODO, sim/ucsim/app.cc,
	  sim/ucsim/appcl.h, sim/ucsim/avr.src/Makefile.in,
	  sim/ucsim/avr.src/avr.cc, sim/ucsim/avr.src/avrcl.h,
	  sim/ucsim/avr.src/savr.cc, sim/ucsim/c.sh, sim/ucsim/chars.cc,
	  sim/ucsim/charscl.h, sim/ucsim/cmd.src/Makefile.in,
	  sim/ucsim/cmd.src/bp.cc, sim/ucsim/cmd.src/bpcl.h,
	  sim/ucsim/cmd.src/cmd_bp.cc, sim/ucsim/cmd.src/cmd_bpcl.h,
	  sim/ucsim/cmd.src/cmd_conf.cc, sim/ucsim/cmd.src/cmd_confcl.h,
	  sim/ucsim/cmd.src/cmd_exec.cc, sim/ucsim/cmd.src/cmd_execcl.h,
	  sim/ucsim/cmd.src/cmd_get.cc, sim/ucsim/cmd.src/cmd_getcl.h,
	  sim/ucsim/cmd.src/cmd_gui.cc, sim/ucsim/cmd.src/cmd_guicl.h,